--- a/course/forecasting/hw/01/prob2.Rmd
+++ b/course/forecasting/hw/01/prob2.Rmd
@@ -5,7 +5,7 @@ output: html_document
 ---
 
 In this problem we will consider the daily U.S. Dollar-Euro exchange rate,
-daily, 4 Jan 1999 to 27 Jan 2015 (*n* = 4115).
+daily, 4 Jan 1999 to 6 Feb 2017 (*n* = 4636).
 
 ```{r}
 data <- read.csv("http://ptrckprry.com/course/forecasting/data/euro.csv")
@@ -31,8 +31,9 @@ Here is a time-series plot of Euro.
 Part B
 ------
 
-Here, we fit two models and predict the value at 28 Jan 2015 (time = 4116).  In
-the first model, we fit to observations 1 to 700.  In the second model, we fit to observations 701 to 4115.
+Here, we fit two models and predict the value at 7 Feb 2017 (time = 4637).  In
+the first model, we fit to observations 1 to 700.  In the second model, we fit
+to observations 701 to 4636.
 
 ```{r}
 time <- 1:length(euro) # create the time variable
@@ -44,18 +45,18 @@ time <- 1:length(euro) # create the time variable
 #model1 <- lm(????, subset=1:700)
 #summary(model1)
 
-#model2 <- lm(????, subset=701:4115)
+#model2 <- lm(????, subset=701:4636)
 #summary(model2)
 ```
 
 Here are the predicted values and 95% prediction intervals for the two models:
 ```{r}
-newdata <- data.frame(time = 4116)
+newdata <- data.frame(time = 4637)
 # Add code to compute the two prediction intervals
 ```
 
 **Did both of the forecast intervals succeed in containing the actual value
-for 28 Jan 2015?  If not, then use what you learned in Problem~1 to give a
+for 7 Feb 2017?  If not, then use what you learned in Problem~1 to give a
 statistical explanation of what went wrong.**
 
 
@@ -73,5 +74,5 @@ plot(time, euro, t="l")
 # abline(????, lty=3)
 
 legend("bottomright", inset=0.05,
-       legend=c("Fit to 1-700", "Fit to 701-4115"), lty=c(2,3))
+       legend=c("Fit to 1-700", "Fit to 701-4636"), lty=c(2,3))
 ```
